version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Automation/Mechanical/FE/CDB/ETCommand.rst.txt
.. vale off



:class:`ETCommand`
==================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Automation.Mechanical.FE.CDB.ETCommand(iETCommand: Ansys.Common.Interop.FEParsePlugin_ANSYS.IETCommand)

   Bases: :py:obj:`object`


   
   Represents an ET command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: ETCommand

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Ename`
            - Gets the element name.
          * - :py:attr:`~FullName`
            - FullName property.
          * - :py:attr:`~Id`
            - Gets the element number.
          * - :py:attr:`~Index`
            - Gets the command index.
          * - :py:attr:`~Keyopts`
            - Gets the key options.
          * - :py:attr:`~Name`
            - Gets the command name.
          * - :py:attr:`~ToCdbCommandString`
            - Gets the command text formatted as a CDB file entry.







Property detail
---------------
.. py:property:: Ename
   :type: Optional[int]


   
   Gets the element name.
















   ..
       !! processed by numpydoc !!

.. py:property:: FullName
   :type: Optional[str]


   
   FullName property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Id
   :type: Optional[int]


   
   Gets the element number.
















   ..
       !! processed by numpydoc !!

.. py:property:: Index
   :type: Optional[int]


   
   Gets the command index.
















   ..
       !! processed by numpydoc !!

.. py:property:: Keyopts
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.FE.CDB.CommandKeyOpt]]


   
   Gets the key options.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Gets the command name.
















   ..
       !! processed by numpydoc !!

.. py:property:: ToCdbCommandString
   :type: Optional[Ansys.ACT.Automation.Mechanical.FE.CDB.CdbCommandFormatAndParameter]


   
   Gets the command text formatted as a CDB file entry.
   Gets the command parameters formatted as a string.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on